# sc4-render-services

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  SC4RenderServices.ini  Third Party Notices.txt
.github/workflows/: build.yml  doxygen-pages.yml  doxygen.yml  windows-ci.yml
cmake/: CopyIfNotExists.cmake  SC4RenderServicesVersion.rc.in
docs/: Doxyfile  services.md
src/: DX7InterfaceHook.cpp  DX7InterfaceHook.h  cISGLDX7D3DX.h  version.h  version.rc
src/public/: ImGuiPanel.h  ImGuiPanelAdapter.h  ImGuiServiceIds.h  ImGuiTexture.h  S3DCameraServiceIds.h  cIGZDrawService.h  cIGZImGuiService.h  cIGZS3DCameraService.h
src/sample/: ImGuiSampleCityDirector.cpp  ImGuiSampleDemoDirector.cpp  ImGuiSampleDirector.cpp  ImGuiTextureSample.cpp  RDTSCPatchDirector.cpp  S3DCameraDebugSampleDirector.cpp  WorldProjectionSampleDirector.cpp
src/sample/road-decal/: RoadDecalData.cpp  RoadDecalData.hpp  RoadDecalInputControl.cpp  RoadDecalInputControl.hpp  RoadDecalSampleDirector.cpp
src/service/: CustomServicesDirector.cpp  DrawService.cpp  DrawService.h  ImGuiService.cpp  ImGuiService.h  ImGuiServiceDirector.cpp  ImGuiServiceIds.h  RenderServicesDirector.cpp  S3DCameraService.cpp  S3DCameraService.h  cIGZImGuiService.h
src/utils/: Logger.cpp  Logger.h  Settings.cpp  Settings.h
